; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/common/videobuf2/extr_videobuf2-core.c_vb2_core_queue_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/common/videobuf2/extr_videobuf2-core.c_vb2_core_queue_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vb2_queue = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vb2_core_queue_release(%struct.vb2_queue* %0) #0 {
  %2 = alloca %struct.vb2_queue*, align 8
  store %struct.vb2_queue* %0, %struct.vb2_queue** %2, align 8
  %3 = load %struct.vb2_queue*, %struct.vb2_queue** %2, align 8
  %4 = call i32 @__vb2_cleanup_fileio(%struct.vb2_queue* %3)
  %5 = load %struct.vb2_queue*, %struct.vb2_queue** %2, align 8
  %6 = call i32 @__vb2_queue_cancel(%struct.vb2_queue* %5)
  %7 = load %struct.vb2_queue*, %struct.vb2_queue** %2, align 8
  %8 = getelementptr inbounds %struct.vb2_queue, %struct.vb2_queue* %7, i32 0, i32 0
  %9 = call i32 @mutex_lock(i32* %8)
  %10 = load %struct.vb2_queue*, %struct.vb2_queue** %2, align 8
  %11 = load %struct.vb2_queue*, %struct.vb2_queue** %2, align 8
  %12 = getelementptr inbounds %struct.vb2_queue, %struct.vb2_queue* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @__vb2_queue_free(%struct.vb2_queue* %10, i32 %13)
  %15 = load %struct.vb2_queue*, %struct.vb2_queue** %2, align 8
  %16 = getelementptr inbounds %struct.vb2_queue, %struct.vb2_queue* %15, i32 0, i32 0
  %17 = call i32 @mutex_unlock(i32* %16)
  ret void
}

declare dso_local i32 @__vb2_cleanup_fileio(%struct.vb2_queue*) #1

declare dso_local i32 @__vb2_queue_cancel(%struct.vb2_queue*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @__vb2_queue_free(%struct.vb2_queue*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
